--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,30 @@
     <name>Allure TestNG Example</name>
     <description>Allure TestNG Example</description>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.10.1</version>
+					<configuration>
+						<annotationProcessorPaths>
+							<path>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+								<version>${lombok-version}</version>
+							</path>
+						</annotationProcessorPaths>
+						<source>17</source>
+						<target>17</target>
+						<encoding>${project.build.sourceEncoding}</encoding>
+						<fork>true</fork>
+						<maxmem>1024m</maxmem>
+						<executable>${env.JAVA_HOME}/bin/javac</executable>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
