--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -39,15 +39,15 @@ jobs:
         continue-on-error: true
         with:
           ref: gh-pages
-          path: /home/runner/work/allure-testng-example/allure-testng-example/2gh_pages2
+          path: gh_pages
 
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.7
         if: always()
         id: allure-report
         with:
-          allure_results: allure-results
-          gh_pages: 2gh_pages2
+          allure_results: ../Tests/Service allure-results
+          gh_pages: gh_pages
           allure_report: 3allure-report3
           allure_history: 4allure-history4
 
