--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -41,6 +41,10 @@ jobs:
           ref: gh-pages
           path: Tests/Services/gh_pages
 
+      - name: Workspace scan
+        run: pwd && ls -R
+        
+
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.7
         if: always()
