--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -39,11 +39,10 @@ jobs:
         continue-on-error: true
         with:
           ref: gh-pages
-          path: Tests/Services/gh_pages
+          path: gh_pages
 
       - name: Workspace scan
-        run: pwd && ls -R
-        
+        run: pwd && ls -R        
 
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.7
@@ -51,7 +50,7 @@ jobs:
         id: allure-report
         with:
           allure_results: ./allure-results
-          gh_pages: Tests/Service/gh_pages
+          gh_pages: gh_pages
           allure_report: allure-report
           allure_history: allure-history
 
