--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -41,8 +41,11 @@ jobs:
           ref: gh-pages
           path: gh_pages
 
-      - name: Workspace scan
-        run: pwd && ls -R        
+      - name: Runner scan
+        run: pwd && ls -R
+        
+      - name: github/workspace/ scan
+        run: pwd && ls -R
 
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.7
