--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -63,4 +63,4 @@ jobs:
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./Tests/Service/target/allure-results
+          PUBLISH_DIR: /home/runner/work/allure-testng-example/allure-testng-example/
