--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-        
+
       - name: Start MySQL server
         run: sudo /etc/init.d/mysql start
 
@@ -33,6 +33,9 @@ jobs:
         run: mvn -T 6 package -P ci -B test
         continue-on-error: true
 
+      - name: Runner scan
+        run: pwd && ls -R
+
       - name: Get Allure history
         uses: actions/checkout@v2
         if: always()
@@ -43,9 +46,6 @@ jobs:
 
       - name: Runner scan
         run: pwd && ls -R
-        
-      - name: /home/runner/work/ scan
-        run: cd /home/runner/work/ && pwd && ls -R
 
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.7
