--- a/.github/workflows/allure-testng.yml
+++ b/.github/workflows/allure-testng.yml
@@ -33,9 +33,6 @@ jobs:
         run: mvn -T 6 package -P ci -B test
         continue-on-error: true
 
-      - name: Runner scan
-        run: pwd && ls -R
-
       - name: Get Allure history
         uses: actions/checkout@v3
         if: always()
@@ -44,15 +41,12 @@ jobs:
           ref: gh-pages
           path: gh_pages
 
-      - name: Runner scan
-        run: pwd && ls -R
-
       - name: Allure Report with history
         uses: simple-elf/allure-report-action@v1.7
         if: always()
         id: allure-report
         with:
-          allure_results: ./allure-results
+          allure_results: /home/runner/work/allure-testng-example/allure-testng-example/Tests/Services/target/allure-results
           gh_pages: gh_pages
           allure_report: allure-report
           allure_history: allure-history
